<resources>
    <string name="app_name">SuitCase</string>
    <string name="slogan">Unpack your perfect getaway with us</string>
    <string name="notice">This is not your username or pin. This name will be visible to your
        Suitcase contacts.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="purchased">Purchased</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="image_name">Image Name</string>
    <string name="price">Price</string>
    <string name="update_product_image">Update Product Image</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="upload_product_image">Upload Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="save">Save</string>
    <string name="new_item">New Item</string>
    <string name="search">Search…</string>
    <string name="account_creation">Creating account…</string>
    <string name="list_hub">List Hub</string>
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
</resources>