<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/shaded_dark_black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/loginScreenApplicationLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/application_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/loginScreenApplicationLogo"
            android:layout_centerHorizontal="true"
            android:textSize="46sp"
            android:fontFamily="@font/open_sans_bold"/>

        <!-- Email editTextField -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_below="@id/loginText"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/start_icon_selector"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/pastel_blue"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="#8019191B"
            app:boxStrokeColor="@color/pastel_blue"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/email"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password editTextField -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_below="@id/loginEmailTextInputLayout"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/start_icon_selector"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/pastel_blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/start_icon_selector"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="#8019191B"
            app:boxStrokeColor="@color/pastel_blue"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/open_sans_regular"
                android:textSize="12sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot password text -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPasswordTextInputLayout"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="2dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <!-- SignIn button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordText"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            app:strokeColor="@color/magenta_pink"
            app:strokeWidth="3dp"
            app:cornerRadius="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:backgroundTint="@color/black"/>

        <LinearLayout
            android:layout_below="@id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="60dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="#99FFFFFF"
                android:textSize="12sp"
                android:fontFamily="@font/open_sans_regular"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/light_blue"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:fontFamily="@font/open_sans_bold" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>